<resources>
    <string name="app_name">II3510_CourseAPP_2526</string>
    <string name="title_labwork1">Labwork1</string>
    <string name="button_task_list">Task List</string>
    <string name="button_change_language">Change language</string>
    <string name="dialog_choose_language">Choose a language</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="label_enter_name">Enter your name</string>
    <string name="content_description_jetpack_logo">Jetpack Compose logo</string>
    <string name="text_isep_compose">ISEP Compose</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="text_inside_box">Inside a Box</string>
    <string name="text_top">Top Text</string>
    <string name="button_click_me">Click Me</string>
    <string name="text_bottom">Bottom Text</string>
    <string name="greeting">Hello %1$s!</string>
    <string name="title_task_list">Task List</string>
    <string name="label_new_task">New task</string>
    <string name="content_description_delete">Delete</string>
    <string name="content_description_back">Back</string>
    <string name="task_id">Task ID: %1$d</string>
    <string name="task_description">Description: %1$s</string>
    <string name="task_description_empty">No description</string>
    <string name="task_not_found">Task not found.</string>
    <string name="no_task">No Task</string>
    <string name="content_description_language_button">Change application language</string>
    <string name="timer_time">Time: %1$d s</string>
    <string name="counter_count">Count: %1$d</string>
    <string name="button_add">Add</string>
    <string name="title_music_player">Simple Music Player</string>
    <string name="status_now_playing">Now Playing...</string>
    <string name="status_stopped">Stopped</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="click_counter_title">Click Counter</string>
    <string name="click_counter_count">Button Clicks: %1$d</string>
    <string name="click_counter_button">Click Me!</string>
    <string name="click_counter_count_initial">Button Clicks: 0</string>
    <string name="lifecycle_screen_title">Activity Lifecycle &amp; MediaPlayer</string>
    <string name="button_play_music_raw">Play Music (Raw)</string>
    <string name="button_stop_music">Stop Music</string>
    <string name="lifecycle_events_title">Lifecycle Events:</string>
    <string name="action_stop">Stop</string>
    <string name="song_one_label">Song 1 (music_one)</string>
    <string name="current_audio_label">Current Audio: %1$s</string>
    <string name="current_audio_music_one">music_one.mp3</string>
    <string name="current_audio_other">Other (ID: %1$d)</string>
</resources>