<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:paddingTop="100dp">

        <ImageButton
            android:id="@+id/imageButtonJPC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:contentDescription="@string/content_description_jetpack_logo"
            app:srcCompat="@mipmap/jetpack_compose_icon"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/buttonTaskList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/button_task_list"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/buttonChangeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_change_language"
            android:contentDescription="@string/content_description_language_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>